# precommit-ci-test

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/pkg-core/: pyproject.toml
src/pkg-core/mycore/: __init__.py
src/pkg-first/: pyproject.toml
src/pkg-first/myfirst/: __init__.py
src/pkg-fourth/: pyproject.toml
src/pkg-fourth/pkg_fourth/: __init__.py
src/pkg-second/: pyproject.toml
src/pkg-second/mysecond/: __init__.py
src/pkg-third/: pyproject.toml
src/pkg-third/pkg_third/: __init__.py
src/precommit_ci_test/: cli.py  settings.py
tests/: cli_test.py  pkg_test.py  settings_test.py
