[project]
name = "pkg-second"
authors = [
  {email = "johndoe@example.org", name = "John Doe"},
]
dependencies = ["pkg-core"]
description = "Second package"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]
